WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251250
Spelling fix for errorMessageForTransfer function
https://bugs.webkit.org/show_bug.cgi?id=251250
Summary
Spelling fix for errorMessageForTransfer function
Brandon
Reported
2023-01-26 23:06:25 PST
Spelling fix for errorMessageForTransfer function
Attachments
Add attachment
proposed patch, testcase, etc.
Brandon
Comment 1
2023-01-26 23:09:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9210
EWS
Comment 2
2023-01-27 07:58:30 PST
Committed
259486@main
(e70c4066c8d8): <
https://commits.webkit.org/259486@main
> Reviewed commits have been landed. Closing PR #9210 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-27 07:59:18 PST
<
rdar://problem/104745279
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug