Spelling fix for errorMessageForTransfer function https://bugs.webkit.org/show_bug.cgi?id=251250

Reviewed by Yusuke Suzuki.

Noticed incorrect spelling while browsing the code today.
Update errorMesasgeForTransfer to errorMessageForTransfer.

* Source/JavaScriptCore/runtime/ArrayBuffer.cpp:
(JSC::errorMessageForTransfer):
(JSC::errorMesasgeForTransfer): Deleted.
* Source/JavaScriptCore/runtime/ArrayBuffer.h:
* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::SerializedScriptValue::create):

Canonical link: https://commits.webkit.org/259486@main